# swu-card-db

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py
app/static/: robots.txt
app/static/css/: styles.css
app/static/js/: htmx.2.0.4.min.js
app/templates/: 404.html  base.html  card.html  card_list.html  index.html  search.html  set.html  set_list.html
config/: config.json
data/: all_cards.json  corrections.json  create_db.py  db.sqlite3  fetch_card_data.py  fetch_card_images.py  sets.json
