[project]
name = "swu-card-db"
version = "0.1.0"
description = "A Star Wars Unlimited card database web app built on FastAPI, SQLAlchemy, Jinja2 and htmx."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "jinja2==3.1.6",
    "sqlalchemy==2.0.40",
    "unidecode>=1.3.8",
    "uvicorn-worker>=0.3.0",
]

[dependency-groups]
dev = [
    "pillow==11.2.1",
    "requests>=2.32.3",
    "uvicorn==0.34.2",
]
